# lindsey-405b-replication

./: .gitignore  LICENSE  README.md  TODO.md  analyze_full_sweep.py  judge_lindsey_batch.py  judge_lindsey_parallel.py  judge_lindsey_sweep.py  lindsey_full_sweep.py  make_figures.py  pyproject.toml  runpod-vllm-fp8.md  smoke_vllm_lens.py
results/: lindsey_full_Llama-3_1-405B-Instruct-FP8-dynamic_layer84_20260503_014510.json  lindsey_full_Llama-3_1-405B-Instruct-FP8-dynamic_layer84_20260503_014510.judged.json  vector_all_caps_Llama-3_1-405B-Instruct-FP8-dynamic_layer84_20260503_014510.pt  vector_love_Llama-3_1-405B-Instruct-FP8-dynamic_layer84_20260503_014510.pt
results/2026-05-06-layer100/: lindsey_full_Llama-3_1-405B-Instruct-FP8-dynamic_layer100_20260506_225728.json  lindsey_full_Llama-3_1-405B-Instruct-FP8-dynamic_layer100_20260506_225728.judged.json  vector_all_caps_Llama-3_1-405B-Instruct-FP8-dynamic_layer100_20260506_225728.pt  vector_love_Llama-3_1-405B-Instruct-FP8-dynamic_layer100_20260506_225728.pt
results/2026-05-06-layer70/: lindsey_full_Llama-3_1-405B-Instruct-FP8-dynamic_layer70_20260506_224710.json  lindsey_full_Llama-3_1-405B-Instruct-FP8-dynamic_layer70_20260506_224710.judged.json  vector_all_caps_Llama-3_1-405B-Instruct-FP8-dynamic_layer70_20260506_224710.pt  vector_love_Llama-3_1-405B-Instruct-FP8-dynamic_layer70_20260506_224710.pt
results/2026-05-06-layer84/: lindsey_full_Llama-3_1-405B-Instruct-FP8-dynamic_layer84_20260506_222214.json  (+3 more)
scripts/: auto_sweep.py  notify_when_available.py  setup_pod_manual.sh
(+4 files in other folders)
